Should fix the issue where the slideshow overlaps the buttons

--- a/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default-narrow.css
+++ b/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default-narrow.css
@@ -48,6 +48,9 @@ ul li.leaf {
 #block-block-2 {
   display:none;
  }
+
+#region-header-first { float: none; }
+
 @media (max-width: 979px) {
   .zone-user-wrapper .menu .leaf a {
     line-height:normal;
